Bug 418498 - Maximize current Terminal (Keyboard vs Mouse)
Summary: Maximize current Terminal (Keyboard vs Mouse)
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: split-view (other bugs)
Version First Reported In: 19.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-05 14:08 UTC by Nikolay Zlatev
Modified: 2020-10-29 03:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikolay Zlatev 2020-03-05 14:08:07 UTC
SUMMARY
There is a difference between "Maximize split-view" with keyboard (ctrl+shift+E) vs Mouse (click on the view header maximize icon)

STEPS TO REPRODUCE
1. Split
2. Maximize with keyboard
3. Minimize with mouse

OBSERVED RESULT
Internal state of the view is lost and views can't be rearranged with mouse drag.

Sometimes keyboard shortcut stop working.

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Arch Linux
Comment 1 Justin Zobel 2020-10-22 23:57:14 UTC
I can confirm this issue on 20.08.1.
Comment 2 Bug Janitor Service 2020-10-28 23:47:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/260
Comment 3 Carlos Alves 2020-10-29 02:42:22 UTC
Git commit 6878f437f1a4d7a435c7ae22cc02c07ba8fd54bb by Carlos Alves.
Committed on 28/10/2020 at 23:43.
Pushed by hindenburg into branch 'master'.

Fix Maximize current Terminal (Keyboard vs Mouse)

It checks if the toggle is minimized to let it rearrange.
But Keyboard shortcut did not toggle the button.
FIXED-IN: 20.08.3

M  +5    -0    src/terminalDisplay/TerminalDisplay.cpp
M  +3    -0    src/terminalDisplay/TerminalDisplay.h
M  +7    -0    src/widgets/TerminalHeaderBar.cpp
M  +1    -0    src/widgets/TerminalHeaderBar.h
M  +1    -0    src/widgets/ViewSplitter.cpp

https://invent.kde.org/utilities/konsole/commit/6878f437f1a4d7a435c7ae22cc02c07ba8fd54bb
Comment 4 Kurt Hindenburg 2020-10-29 03:15:58 UTC
Git commit 45733c04b5712b44ca9dd89e55da9c20fe0f152c by Kurt Hindenburg, on behalf of Carlos Alves.
Committed on 29/10/2020 at 03:15.
Pushed by hindenburg into branch 'release/20.08'.

Fix Maximize current Terminal (Keyboard vs Mouse)

It checks if the toggle is minimized to let it rearrange.
But Keyboard shortcut did not toggle the button.
FIXED-IN: 20.08.3

Cherry-pick from 6878f437f1a4d7a435c7ae22cc02c07ba8fd54bb

M  +5    -0    src/TerminalDisplay.cpp
M  +3    -0    src/TerminalDisplay.h
M  +7    -0    src/TerminalHeaderBar.cpp
M  +1    -0    src/TerminalHeaderBar.h
M  +1    -0    src/ViewSplitter.cpp

https://invent.kde.org/utilities/konsole/commit/45733c04b5712b44ca9dd89e55da9c20fe0f152c