Fix Maximize current Terminal (Keyboard vs Mouse)

It checks if the toggle is minimized to let it rearrange.
But Keyboard shortcut did not toggle the button.

BUG: 418498
FIXED-IN: 20.08.3